--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "ayamyamyam",
   "main": "index.js",
   "scripts": {
+    "start": "SET NODE_ENV=dev&&nodemon",
+    "build": "SET NODE_ENV=prod&&tsc --project ./",
+    "deploy": "node ./build/src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +24,12 @@
   "homepage": "https://github.com/Moomoocaf/myayam-repo#readme",
   "dependencies": {},
   "devDependencies": {
+    "@types/body-parser": "^1.19.0",
+    "@types/cors": "^2.8.8",
+    "@types/express": "^4.17.8",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongoose": "^5.7.36",
+    "@types/node": "^14.14.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
